@@ -63,4 +63,18 @@ void pidgin_notify_uninit(void);
 
 G_END_DECLS
 
+/**
+ * Returns TRUE if there are unseen emails, FALSE otherwise.
+ *
+ * @return TRUE if there are unseen emails, FALSE otherwise.
+ */
+gboolean pidgin_notify_emails_pending(void);
+
+/**
+ * Presents mail dialog to the user.
+ *
+ * @return void.
+ */
+void pidgin_notify_emails_present(void *data);
+
 #endif /* _PIDGINNOTIFY_H_ */
